# CatalogScolar

./: 11A.csv  12B.csv  Barchart.cpp  Barchart.h  BarchartProxy.cpp  BarchartProxy.h  CMakeLists.txt  Catalog.cpp  Catalog.h  CatalogFactory.cpp  CatalogFactory.h  Clasa.cpp  Clasa.h  ConcediuMedical.cpp  ConcediuMedical.h  Director.cpp  Director.h  ElevGimnaziu.cpp  ElevGimnaziu.h  ElevPrimar.cpp  ElevPrimar.h  Exceptions.h  IBarchart.h  Materie.cpp  Materie.h  Nota.cpp  Nota.h  Parinte.cpp  Parinte.h  Person.cpp  Person.h  Profesor.cpp  Profesor.h  README.md  SchoolAPI.cpp  SchoolAPI.h  SchoolStaff.cpp  SchoolStaff.h  Scoala.cpp  Scoala.h  (+5 more)
.github/workflows/: cmake.yml
